--- a/HW7_pmb434/HW7_1_pmb434.ipynb
+++ b/HW7_pmb434/HW7_1_pmb434.ipynb
@@ -152,6 +152,8 @@
     "\n",
     "(Note: a while ago I wrote a quick function that plots choropleths and maps of NYC specifically putting legends and colorbars in the empty spaces taking advantage of the shape of the city and you are welcome to use it: https://github.com/fedhere/choroplethNYC. BUT YOU DO NOT HAVE TO)\n",
     "\n",
+    "If you want to learn how to install a package from within the notebook look here https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/\n",
+    "\n",
     "Your map should look someting like:"
    ]
   },
